# blockgame

./: CMakeLists.txt
include/glad/: glad.h
lib/: glad.c
res/shaders/: basic.shader
src/: main.cpp
